--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Your Name - Web Developer</title>
+    <title>Jason Garcia - Web Developer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -20,53 +20,18 @@
         </ul>
     </nav>
 
-    <section id="landing">
-        <img src="selife.jpg" alt="Jason Garcia"></img>
-        <p>
-            Engineering Technician and building skills for a new Career in IT/Full Stack Developer
-        </p>
-        <!-- Add content for your landing page -->
-    </section>
-   
     <section id="about">
         <h2>About me</h2>
         <p>
-            I'm Jason Garcia, a U.S. Navy veteran with 21 years of dedicated service, and I've charted an inspiring
-            course from the high seas to the digital realm.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam vel quam elementum pulvinar etiam non. Eget nulla facilisi etiam dignissim diam. Fringilla est ullamcorper eget nulla facilisi etiam dignissim. Ultricies mi quis hendrerit dolor magna eget. Laoreet id donec ultrices tincidunt arcu. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. Adipiscing bibendum est ultricies integer quis auctor elit sed vulputate. Feugiat nisl pretium fusce id velit ut tortor pretium viverra. Enim tortor at auctor urna nunc id cursus metus. In egestas erat imperdiet sed euismod nisi porta lorem mollis. Tempus urna et pharetra pharetra massa massa ultricies. A iaculis at erat pellentesque adipiscing. Nisl nisi scelerisque eu ultrices vitae auctor eu augue. Euismod quis viverra nibh cras pulvinar. Ullamcorper sit amet risus nullam eget felis eget nunc lobortis. Laoreet sit amet cursus sit amet dictum. Id neque aliquam vestibulum morbi blandit cursus risus at ultrices. Mi tempus imperdiet nulla malesuada pellentesque. Magna eget est lorem ipsum dolor sit amet consectetur.
         </p>
-        <p>
-            My journey of innovation began with earning a digital arts certificate at UMGC, followed by my journey as an
-            alumni of Full Stack Academy. As a junior developer, I combine my military discipline with a newfound
-            passion for technology to create exciting digital experiences.
+            Non blandit massa enim nec dui nunc mattis. Volutpat lacus laoreet non curabitur gravida arcu ac tortor dignissim. Eu augue ut lectus arcu bibendum at varius. Massa tincidunt nunc pulvinar sapien et. Amet aliquam id diam maecenas ultricies mi eget mauris. Morbi non arcu risus quis varius quam quisque id. Quam nulla porttitor massa id neque aliquam vestibulum morbi. Ac odio tempor orci dapibus. Nec nam aliquam sem et tortor consequat id porta. Ac felis donec et odio. Diam phasellus vestibulum lorem sed risus ultricies. Condimentum lacinia quis vel eros. Quam lacus suspendisse faucibus interdum posuere lorem ipsum.
         </p>
-        <p>
-            From the deck of a Navy ship to the coding screen, my transition to a freelance graphic designer and junior
-            developer has been nothing short of exhilarating. Join me on this creative voyage, where the love for art
-            and technology merge seamlessly at your service. Explore, learn, and discover the wonders of the digital
-            world with Bull Squid!"
-        </p>
-        <!-- Add content for your about page -->
-    </section>
-    <section id="portfolio">
-        <h2> Portfolio</h2>
-        <div class="row">
-            <div class="column">
-                <section class="left">
-                    <table>
-                        <h3>Digital Art</h3>
-                        <ul>
-                            <li>Bull Squid</li>
-                            <li>Burro Gordo</li>
-                            <li>Op Channel</li>
-                        </ul>
-                    </table>
-                </section>
-            </div>
-            <!-- Add content for your portfolio page -->
+    
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2023 Jason Garcia</p>
     </footer>
 </body>
 
