--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Your Name - Web Developer</title>
+    <title>Jason Garcia - Web Developer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -19,54 +19,23 @@
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
-
-    <section id="landing">
-        <img src="selife.jpg" alt="Jason Garcia"></img>
-        <p>
-            Engineering Technician and building skills for a new Career in IT/Full Stack Developer
-        </p>
-        <!-- Add content for your landing page -->
-    </section>
    
-    <section id="about">
-        <h2>About me</h2>
+    <section id="Portfolio">
+        <h2>Portfolio</h2>    
+        <table>
+            <td>
+                <img src="art" alt="art picture"></img>
+            </td>
+            <td>
+                <img src="art.jpg" alt="art picture"></img>
+            </td>
+        </table>
         <p>
-            I'm Jason Garcia, a U.S. Navy veteran with 21 years of dedicated service, and I've charted an inspiring
-            course from the high seas to the digital realm.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit ullamcorper dignissim cras tincidunt. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. Vitae tempus quam pellentesque nec nam aliquam sem. Aliquet porttitor lacus luctus accumsan tortor posuere. Pharetra pharetra massa massa ultricies. Imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Magna etiam tempor orci eu lobortis. Lacus sed viverra tellus in hac habitasse. Gravida in fermentum et sollicitudin ac orci phasellus egestas. Consectetur a erat nam at lectus urna duis. Fames ac turpis egestas integer eget aliquet nibh praesent. Platea dictumst vestibulum rhoncus est. Integer feugiat scelerisque varius morbi enim nunc faucibus a. Proin libero nunc consequat interdum varius.
         </p>
-        <p>
-            My journey of innovation began with earning a digital arts certificate at UMGC, followed by my journey as an
-            alumni of Full Stack Academy. As a junior developer, I combine my military discipline with a newfound
-            passion for technology to create exciting digital experiences.
-        </p>
-        <p>
-            From the deck of a Navy ship to the coding screen, my transition to a freelance graphic designer and junior
-            developer has been nothing short of exhilarating. Join me on this creative voyage, where the love for art
-            and technology merge seamlessly at your service. Explore, learn, and discover the wonders of the digital
-            world with Bull Squid!"
-        </p>
-        <!-- Add content for your about page -->
     </section>
-    <section id="portfolio">
-        <h2> Portfolio</h2>
-        <div class="row">
-            <div class="column">
-                <section class="left">
-                    <table>
-                        <h3>Digital Art</h3>
-                        <ul>
-                            <li>Bull Squid</li>
-                            <li>Burro Gordo</li>
-                            <li>Op Channel</li>
-                        </ul>
-                    </table>
-                </section>
-            </div>
-            <!-- Add content for your portfolio page -->
-    </section>
-
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2023 Jason Garcia</p>
     </footer>
 </body>
 
