--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
             adipiscing elit. Purus in mollis nunc sed id semper risus in hendrerit. Sed blandit libero volutpat sed cras
             ornare arcu. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare.
         </p>
-        <!-- Add content for your landing page -->
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2023 Jason Garcia</p>
     </footer>
 </body>
 
