--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Your Name - Web Developer</title>
+    <title>Jason Garcia - Web Developer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -18,20 +18,31 @@
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
-
-    <section id="homepage">
-        <img src="selife.jpg" alt="Jason Garcia"></img>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Mi bibendum neque egestas congue quisque. Eget felis eget nunc lobortis mattis aliquam.
-            Pellentesque dignissim enim sit amet venenatis urna cursus eget. Eu feugiat pretium nibh ipsum consequat
-            nisl vel pretium lectus. Consectetur lorem donec massa sapien faucibus et molestie ac feugiat. Ultrices mi
-            tempus imperdiet nulla. Tortor pretium viverra suspendisse potenti nullam ac tortor. Sit amet consectetur
-            adipiscing elit. Purus in mollis nunc sed id semper risus in hendrerit. Sed blandit libero volutpat sed cras
-            ornare arcu. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare.
-        </p>
-    </section>
-
+    <main>
+        <section>
+            <img src="https://img.freepik.com/free-photo/waist-up-portrait-handsome-serious-unshaven-male-keeps-hands-together-dressed-dark-blue-shirt-has-talk-with-interlocutor-stands-against-white-wall-self-confident-man-freelancer_273609-16320.jpg?t=st=1697759838~exp=1697760438~hmac=c9306172cb0a33e913a48f87cfcec6621e3fafe85cc29573ad27947372c43e70 alt="
+                width="400px"></img>
+            <h2> Web Developer | Digital Artist</h2>
+        </section>
+        <section class="home">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Mi bibendum neque egestas congue quisque. Eget felis eget nunc lobortis mattis
+                aliquam.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Id velit ut tortor pretium. Id ornare arcu odio ut sem nulla pharetra
+                diam sit. Eget arcu dictum varius duis at consectetur lorem. Leo vel fringilla est ullamcorper eget
+                nulla facilisi. Cras semper auctor neque vitae tempus quam. Aliquet enim tortor at auctor urna nunc id
+                cursus metus. Velit sed ullamcorper morbi tincidunt ornare massa. Mauris ultrices eros in cursus turpis
+                massa tincidunt dui ut. Pulvinar pellentesque habitant morbi tristique senectus et. Proin sed libero
+                enim sed faucibus. Facilisis magna etiam tempor orci eu lobortis elementum nibh.
+            </p>
+            <h3 class="quote">
+                " Success is most often achieved by those who don't know that failure is ineviltable. "
+                <br>
+                - Coco Chanel
+            </h3>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2023 Jason Garcia</p>
     </footer>
