--- a/portfolio.html
+++ b/portfolio.html
@@ -19,20 +19,38 @@
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
-   
-    <section id="Portfolio">
-        <h2>Portfolio</h2>    
-        <table>
-            <td>
-                <img src="art" alt="art picture"></img>
-            </td>
-            <td>
-                <img src="art.jpg" alt="art picture"></img>
-            </td>
-        </table>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit ullamcorper dignissim cras tincidunt. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. Vitae tempus quam pellentesque nec nam aliquam sem. Aliquet porttitor lacus luctus accumsan tortor posuere. Pharetra pharetra massa massa ultricies. Imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Magna etiam tempor orci eu lobortis. Lacus sed viverra tellus in hac habitasse. Gravida in fermentum et sollicitudin ac orci phasellus egestas. Consectetur a erat nam at lectus urna duis. Fames ac turpis egestas integer eget aliquet nibh praesent. Platea dictumst vestibulum rhoncus est. Integer feugiat scelerisque varius morbi enim nunc faucibus a. Proin libero nunc consequat interdum varius.
-        </p>
+    <h2>Portfolio</h2>
+    <hr>
+    <section class="home">
+        <div class="project">
+            <h3>The Brand</h3>
+            <hr>
+            <img src="https://cdn.pixabay.com/photo/2023/09/25/20/11/boat-8275962_1280.jpg" alt="brand logo"
+                width="200px">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Elit ullamcorper dignissim cras tincidunt. Nulla facilisi etiam dignissim diam
+                quis. semper auctor neque vitae tempus quam. Aliquet enim tortor at auctor urna nunc id cursus metus.
+                Velit sed ullamcorper morbi tincidunt ornare massa. Mauris ultrices eros in cursus turpis massa
+                tincidunt dui ut. Pulvinar pellentesque habitant morbi tristique senectus et. Proin sed libero enim sed
+                faucibus. Facilisis magna etiam tempor orci eu lobortis elementum nibh.
+            </p>
+        </div>
+    </section>
+    <section class="home">
+        <div class="project">
+            <h3>The Jourany</h3>
+            <hr>
+            <img src="https://cdn.pixabay.com/photo/2023/10/03/07/46/hamburg-8290719_1280.jpg" alt="brand logo"
+                width="200px">
+            <p>
+                accumsan sit amet nulla facilisi morbi tempus. Magna etiam tempor orci eu lobortis. Lacus sed viverra
+                tellus in hac habitasse. Gravida in fermentum et sollicitudin ac orci phasellus egestas. Consectetur a
+                erat nam at lectus urna duis. Fames ac turpis egestas integer eget aliquet nibh praesent. Platea
+                dictumst vestibulum rhoncus est. Integer feugiat scelerisque varius morbi enim nunc faucibus a. Proin
+                libero nunc consequat interdum varius.
+            </p>
+        </div>
     </section>
     <footer>
         <p>&copy; 2023 Jason Garcia</p>
