--- a/about.html
+++ b/about.html
@@ -24,18 +24,36 @@
         <h2>About me</h2>
         <hr>
         <h3>Hiking</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam vel quam elementum pulvinar etiam non. Eget nulla facilisi etiam dignissim diam. Fringilla est ullamcorper eget nulla facilisi etiam dignissim. Ultricies mi quis hendrerit dolor magna eget. Laoreet id donec ultrices tincidunt arcu. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. Adipiscing bibendum est ultricies integer quis auctor elit sed vulputate. Feugiat nisl pretium fusce id velit ut tortor pretium viverra. Enim tortor at auctor urna nunc id cursus metus. In egestas erat imperdiet sed euismod nisi porta lorem mollis. Tempus urna et pharetra pharetra massa massa ultricies. A iaculis at erat pellentesque adipiscing. Nisl nisi scelerisque eu ultrices vitae auctor eu augue. Euismod quis viverra nibh cras pulvinar. Ullamcorper sit amet risus nullam eget felis eget nunc lobortis. Laoreet sit amet cursus sit amet dictum. Id neque aliquam vestibulum morbi blandit cursus risus at ultrices. Mi tempus imperdiet nulla malesuada pellentesque. Magna eget est lorem ipsum dolor sit amet consectetur.
-        </p>
-        <h3>Digital Arts</h3>
-            Non blandit massa enim nec dui nunc mattis. Volutpat lacus laoreet non curabitur gravida arcu ac tortor dignissim. Eu augue ut lectus arcu bibendum at varius. Massa tincidunt nunc pulvinar sapien et. Amet aliquam id diam maecenas ultricies mi eget mauris. Morbi non arcu risus quis varius quam quisque id. Quam nulla porttitor massa id neque aliquam vestibulum morbi. Ac odio tempor orci dapibus. Nec nam aliquam sem et tortor consequat id porta. Ac felis donec et odio. Diam phasellus vestibulum lorem sed risus ultricies. Condimentum lacinia quis vel eros. Quam lacus suspendisse faucibus interdum posuere lorem ipsum.
-        </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Diam vel quam elementum pulvinar etiam non. Eget nulla facilisi etiam dignissim
+                diam. Fringilla est ullamcorper eget nulla facilisi etiam dignissim. Ultricies mi quis hendrerit dolor
+                magna eget. Laoreet id donec ultrices tincidunt arcu. Pulvinar etiam non quam lacus suspendisse faucibus
+                interdum posuere. Adipiscing bibendum est ultricies integer quis auctor elit sed vulputate. Feugiat nisl
+                pretium fusce id velit ut tortor pretium viverra. Enim tortor at auctor urna nunc id cursus metus. In
+                egestas erat imperdiet sed euismod nisi porta lorem mollis. Tempus urna et pharetra pharetra massa massa
+                ultricies. A iaculis at erat pellentesque adipiscing. Nisl nisi scelerisque eu ultrices vitae auctor eu
+                augue. Euismod quis viverra nibh cras pulvinar. Ullamcorper sit amet risus nullam eget felis eget nunc
+                lobortis. Laoreet sit amet cursus sit amet dictum. Id neque aliquam vestibulum morbi blandit cursus
+                risus at ultrices. Mi tempus imperdiet nulla malesuada pellentesque. Magna eget est lorem ipsum dolor
+                sit amet consectetur.
+            </p>
+            <h3>Digital Arts</h3>
+            <p>
+                Non blandit massa enim nec dui nunc mattis. Volutpat lacus laoreet non curabitur gravida arcu ac tortor
+                dignissim. Eu augue ut lectus arcu bibendum at varius. Massa tincidunt nunc pulvinar sapien et. Amet
+                aliquam
+                id diam maecenas ultricies mi eget mauris. Morbi non arcu risus quis varius quam quisque id. Quam nulla
+                porttitor massa id neque aliquam vestibulum morbi. Ac odio tempor orci dapibus. Nec nam aliquam sem et
+                tortor consequat id porta. Ac felis donec et odio. Diam phasellus vestibulum lorem sed risus ultricies.
+                Condimentum lacinia quis vel eros. Quam lacus suspendisse faucibus interdum posuere lorem ipsum.
+            </p>
 
     </section>
-
     <footer>
         <p>&copy; 2023 Jason Garcia</p>
     </footer>
+   
 </body>
 
 </html>
