--- a/index.html
+++ b/index.html
@@ -43,9 +43,26 @@
             </h3>
         </section>
     </main>
+    <section id="contact">
+        <h2>Contact Form</h2>
+        <div id="parent">
+            <form id="contact-form">
+                <p>
+                <input type="text" id="Name" name="name" placeholder="Name" required>
+                </p>
+                <input type="email" id="email" name="email" placeholder="Email">
+                <p></p>
+                <textarea id="message" name="message" placeholder="Message"></textarea>
+               </p>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </section>
+
     <footer>
         <p>&copy; 2023 Jason Garcia</p>
     </footer>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
