--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -16,6 +17,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
@@ -43,21 +45,6 @@
             </h3>
         </section>
     </main>
-    <section id="contact">
-        <h2>Contact Form</h2>
-        <div id="parent">
-            <form id="contact-form">
-                <p>
-                <input type="text" id="Name" name="name" placeholder="Name" required>
-                </p>
-                <input type="email" id="email" name="email" placeholder="Email">
-                <p></p>
-                <textarea id="message" name="message" placeholder="Message"></textarea>
-               </p>
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </section>
 
     <footer>
         <p>&copy; 2023 Jason Garcia</p>
